--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-drag-drop-files": "^2.3.5",
     "react-feather": "^2.0.9",
     "react-google-recaptcha": "^2.1.0",
     "react-router-dom": "^5.3.0",
