--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
+    "react-calendar": "^3.7.0",
     "react-dom": "^17.0.2",
     "react-drag-drop-files": "^2.3.5",
     "react-feather": "^2.0.9",
